--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,13 @@
 "manifest_version": 2,
 
 "name": "Slack Teams Toolbar",
+"short_name": "slack-teams-toolbar",
 "description": "Add a toolbar to switch team easily.",
 "version": "1.0",
+"icons": { "128": "icon128.png" },
+
+"author": "Maxime Borges <maxime.borges@gmail.com>",
+"homepage_url": "https://github.com/maxaille/slack-teams-toolbar",
 
 "content_scripts": [
     {
@@ -12,6 +17,5 @@
         "js": ["inject.js", "script.js"],
         "css":["styles.css"]
     }
-],
-"icons": { "128": "icon128.png" }
+]
 }
